--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="다양한 영화, TV 시리즈 정보를 열람할 수 있는 Netflix 클론 웹사이트입니다"
     />
+    <script
+      src="https://kit.fontawesome.com/b7e602a11f.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Netflix Clone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
